# Gladix

./: .gitattributes  .gitignore  Cargo.toml  README.md  Readme.md
.github/ISSUE_TEMPLATE/: new_feature.yml
hooking-lib/: Cargo.toml
hooking-lib/src/: call_guard.rs  comms.rs  detours.rs  hooks.rs  lib.rs  manager.rs
kernel-driver/: Cargo.toml  gladix_driver.inx
kernel-driver/src/: lib.rs  security.rs  utils.rs
kernel-driver/src/callbacks/: callback_guard.rs  common.rs  filters.rs  image_load.rs  mod.rs  process.rs  registry.rs
kernel-driver/src/communications/: ioctl_dispatch.rs  memory_ring.rs  mod.rs
shared/: Cargo.toml  build.rs
shared/src/: constants.rs  lib.rs
shared/src/errors/: config_errors.rs  hook_errors.rs  mod.rs  scanner_errors.rs
shared/src/events/: dispatcher.rs  event.proto  event.rs  mod.rs
shared/src/events/callbacks/: callbacks.proto  callbacks.rs  methods.rs  mod.rs
shared/src/events/hook/: hook.proto  hook.rs  methods.rs  mod.rs
shared/src/events/scanner/: methods.rs  mod.rs  scanner.proto  scanner.rs
shared/src/traits/: db_loggable.rs  mod.rs
user-agent/: Cargo.toml
user-agent/src/: cleanup.rs  logger.rs  main.rs
user-agent/src/communications/: ioctl.rs  memory_ring.rs  mod.rs
user-agent/src/config/: config.rs  config.toml
user-agent/src/db/: connection.rs  schema.sql
user-agent/src/scanner/: cache.rs  mod.rs  service.rs  signatures.rs  worker.rs
