[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[features]
default = ["user"]
user    = ["prost/std", "prost/derive", "rusqlite"]
kernel  = ["prost/derive"]

[dependencies]
prost        = { version = "0.13.5", default-features = false } # newer version does not work with no_std
prost-types  = { version = "0.13.5", default-features = false }
rusqlite = { workspace = true, optional = true }
yara-x.workspace    = true
thiserror           = "2.0.12"
toml                = "0.9.2"
log                 = "0.4.27"
wdk-panic = { path = "C:\\Users\\MALDEV01\\Desktop\\my-code\\drivers\\ext-crates\\windows-drivers-rs-main\\crates\\wdk-panic", version = "0.3.0" }


[build-dependencies]
prost-build = "0.13.5"